# Airline_Passenger_Satisfaction_Project

./: README.md  pyproject.toml
data/clean/: classes.csv  customer_types.csv  flights.csv  flights_classes.csv  genders.csv  passengers.csv  satisfactions.csv  travel_types.csv
notebooks/: EDA.ipynb  ERD.ipynb  Hypotheses Testing.ipynb  data_understanding_cleaning.ipynb
sql_scripts/: create_database.sql  query_database.sql
